--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,8 @@ $$\parallel v\parallel_{X}=\bigg(\int\limits_{\Omega}\nabla(\Delta v):\nabla(\De
             \nu\int\limits_{\Omega}\nabla v: \nabla w dx-\int\limits_{\Omega} \sum_{i,j=1}^n v_iv_j\frac{\partial \varphi_j}
             {\partial x_i}dx-\varkappa\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_i}{\partial x_j}\frac{\partial^2 \varphi_i}{\partial x_j\partial x_k}dx- \\
             \varkappa\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_i}{\partial x_j}\frac{\partial^2 \varphi_i}
-            {\partial x_j\partial x_k}dx+ 2\varkappa\int\limits_{\Omega}(\mathcal{E}(v)W_p(v)-W_p(v)\mathcal{E}(v)):
+            {\partial x_j\partial x_k}dx+\\
+            +2\varkappa\int\limits_{\Omega}(\mathcal{E}(v)W_p(v)-W_p(v)\mathcal{E}(v)):
             \nabla\varphi dx=\langle f,\varphi \rangle
         \end{gathered}
     \end{equation}
@@ -185,12 +186,13 @@ $$\parallel v\parallel_{X}=\bigg(\int\limits_{\Omega}\nabla(\Delta v):\nabla(\De
 \begin{lemma}\label{lm:3.1}
     Оператор $A:V\rightarrow V^*$ непрерывен и имеет место оценка 
     $$\parallel Av\parallel_{V^*}\leqslant C_1\parallel v\parallel_V.$$
-    Более того, оператор $A:X\rightarrow X^*$ вполне непрерывеню
+    Более того, оператор $A:X\rightarrow X^*$ вполне непрерывен.
 \end{lemma}
 
 \begin{lemma}\label{lm:3.2}
     Оператор $L:X\rightarrow X^*$ непрерывен, обратим и для него имеет место оценка:
     $$\parallel Lv\parallel_{X^*}\leqslant\varepsilon\parallel v\parallel_v.$$
+    Более того, оператор $L^{-1}:X^*\rightarrow X$ вполне непрерывен.
 \end{lemma}
 
 \begin{lemma}\label{lm:3.3}
@@ -204,3 +206,313 @@ $$\parallel v\parallel_{X}=\bigg(\int\limits_{\Omega}\nabla(\Delta v):\nabla(\De
     $$\parallel B_iv\parallel_{X^*}\leqslant C_3\parallel v\parallel^2_V.$$
     Боле того, оператор $B_i:X\rightarrow X^*$ полностью непрерывен.
 \end{lemma}
+
+\begin{lemma}\label{lm:3.5}
+    Оператор $D:V\rightarrow X^*$ непрерывен и подчиняется оценке:
+    \begin{equation}\label{eq:3.4}
+        \begin{gathered}
+            \parallel D(v)\parallel_{X^*} \leqslant C_4\parallel v\parallel^2_V.
+        \end{gathered}
+    \end{equation}
+\end{lemma}
+
+\begin{proof}
+    Начнем о соценки $\mathcal{E}$ and $W_{\rho}$.
+    $$\parallel\mathcal{E}\parallel^2_{L_2(\Omega)}=\sum_{i,j=1}^n \parallel\mathcal{E}_{i,j}(v)\parallel^2_{L_2(\Omega)}
+    \leqslant С_5 \sum_{i,j=1}^n\int\limits_{\Omega}(\frac{\partial v_i}{\partial x_j}+\frac{\partial v_i}{\partial x_j})^2 dx$$
+    $$=C_5\sum_{i,j=1}^n\int\limits_{\Omega}(\frac{\partial v_i}{\partial x_j}\frac{\partial v_i}{\partial x_j}+
+    2\frac{\partial v_i}{\partial x_j}\frac{\partial v_j}{\partial x_i}+\frac{\partial v_j}{\partial x_j}\frac{\partial v_j}{\partial x_j})dx$$
+    $$=C_5\sum_{i,j=1}^n\bigg[\int\limits_{\Omega}\frac{\partial v_i}{\partial x_j}\frac{\partial v_i}{\partial x_j}dx-
+    2\int\limits_{\Omega} v_i\frac{\partial^2 v_j}{\partial x_i\partial x_j}dx+\int\limits_{\Omega}\frac{\partial v_j}{\partial x_i}\frac{\partial v_j}{\partial x_i}dx\bigg]$$
+    $$=C_5\bigg[\int\limits_{\Omega}\nabla v : \nabla v dx +\int\limits_{\Omega}\nabla v : \nabla v dx\bigg]\leqslant
+    2C_5\parallel v\parallel^2_V$$
+    Далее, $\parallel\mathcal{E}\parallel_{L_2(\Omega)}\leqslant C_6\parallel v\parallel_V$.
+    $$\parallel(W_{\rho})_{ij}(v)\parallel_{L_2(\Omega)}\leqslant\parallel(W_{\rho})_{ij}(v)\parallel_{L_{\infty}(\Omega)}$$
+    $$\leqslant \frac{1}{2} \sup_{x\in\Omega}\bigg|\int\limits_{\Omega}\rho (x-y)(\frac{\partial v_i(y)}{\partial y_j}-\frac{\partial v_j(y)}{\partial y_i})dy\bigg|$$
+    $$\leqslant \frac{1}{2}\sup\limits_{x\in\Omega} \bigg|-\frac{\partial\rho (x-y)}{\partial y_j}v_i(y)+\frac{\partial\rho (x-y)}{\partial y_i}v_i(y)dy\bigg|$$
+    $$\leqslant\parallel grad\rho\parallel_{L_2(\Omega)}\parallel v(t)\parallel_{L_2(\Omega)}.$$
+    По определению, для любого $v\in V, \varphi\in X$ имеем
+    $$\mid\langle D(v),\varphi\rangle\mid=\bigg|\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):\nabla\varphi dx\bigg|\leqslant$$
+    $$\leqslant C_7\bigg[\|\mathcal{E}(v)\|_{L_2(\Omega)}\|W_{\rho}(v)\|_{L_2(\Omega)}+\|W_{\rho}(v)\|_{L_2(\Omega)}\|\mathcal{E}(v)\|_{L_2(\Omega)}\bigg]\|\nabla\varphi\|_{C(\Omega)^n}\leqslant$$
+    $$\leqslant C_8\| v\|^2_V\|\varphi\|_X$$
+    Отсюда получаем оценку \ref{eq:3.3}.
+    Теперь докажем, что оператор $D$ непрерывен. Для любых $v^m,v^0\in V$, имеем:
+    $$\bigg|\langle D(v^m),\varphi\rangle-\langle D(v^0),\varphi\rangle\bigg|=\bigg|\int\limits_{\Omega}\bigg(\mathcal{E}(v^m)W_{\rho}(v^m)-W_{\rho}(v^m)\mathcal{E}(v^m)\bigg):\nabla\varphi$$
+    $$-\int\limits_{\Omega}\bigg(\mathcal{E}(v^0)W_{\rho}(v^0)-W_{\rho}(v^0)\mathcal{E}(v^0)\bigg):\nabla\varphi dx\bigg|\leqslant C_9\bigg|\int\limits_{\Omega}\mathcal{E}(v^m)W_{\rho}(v^m)$$
+    $$-W_{\rho}(v^m)\mathcal{E}(v^m)-\mathcal{E}(v^0)W_{\rho}(v^0)+W_{\rho}(v^0)\mathcal{E}(v^0)dx\bigg|\|\varphi\|_X$$
+    $$\leqslant C_9\bigg|\int\limits_{\Omega}\mathcal{E}(v^m)\bigg(W_{\rho}(v^m)-W_{\rho}(v^0)\bigg)+\bigg(\mathcal{E}(v^m)-\mathcal{E}(v^0)\bigg)W_{\rho}(v^0)$$
+    $$-W_{\rho}(v^m)\bigg(\mathcal{E}(v^m)-\mathcal{E}(v^0)\bigg)-\bigg(W_{\rho}(v^m)-W_{\rho}(v^0)\bigg)\mathcal{E}(v^0)dx\bigg|\|\varphi\|_X$$
+    $$\leqslant C_{10}\bigg[\|\mathcal{E}(v^m)\|_{L_2(\Omega)}\|W_{\rho}(v^m-v^0)\|_{L_2(\Omega)}+\|\mathcal{E}(v^m-v^0)\|_{L_2(\Omega)}$$
+    $$\times\|W_{\rho}(v^0)\|_{L_2(\Omega)}+\|W_{\rho}(v^m)\|_{L_2(\Omega)}\|\mathcal{E}(v^m-v^0)\|_{L_2(\Omega)}+\|W_{\rho}(v^m-v^0)\|_{L_2(\Omega)}$$
+    $$\times\|\mathcal{E}(v^0)\|_{L_2(\Omega)}\bigg]\|\varphi\|_X\leqslant C_{11}\bigg[\|v^m\|_V\|v^m-v^0\|_V+\|v^m-v^0\|_V\|v^0\|_V$$
+    $$+\|v^m\|_V\|v^m-v^0\|_V+\|v^m-v^0\|_V\|v^0\|_V\bigg]\|\varphi\|_X$$
+    $$\leqslant C_{12}\bigg(\|v^m\|_V+\|v^0\|_V\bigg)\|v^m-v^0\|_V\|\varphi\|_X$$
+    Таким образом, мы имеем $\|D(v^m)-D(v^0)\|_X\leqslant C_{13}(\|v^m\|_V+\|v^0\|_V)\|v^m-v^0\|_V$
+    Пусть последовательность ${v^m}\subset V$ сходится к некторой функции $v^0\in V$. Тогда непрерывность отображения $D:V\rightarrow X$
+    следует из предыдущего равенства.
+\end{proof}
+
+\begin{lemma}\label{lm:3.6}
+    Оператор $K:X\rightarrow X^*$ вполне непрерывен.
+\end{lemma}
+
+\begin{proof}
+    Полная непрерывность оператора $K:X\rightarrow X^*$ следует из полной непрерывности следующих операторов
+    \begin{center}
+        $A:X\rightarrow X^*$ \ Лемма \ref{lm:3.1} \\
+        $B_1:X\rightarrow X^*$ \ Лемма \ref{lm:3.3} \\
+        $B_2:X\rightarrow X^*$ \ Лемма \ref{lm:3.4} \\
+        $B_3:X\rightarrow X^*$ \ Лемма \ref{lm:3.4} \\
+        $D:X\rightarrow X^*$ \ Лемма \ref{lm:3.5} \\
+    \end{center}
+\end{proof}
+
+На ряду с уравнением \ref{eq:3.3} рассмотрим следующее семейство операторных уравнений:
+\begin{equation}\label{eq:3.5}
+    \begin{gathered}
+    L(v)+\lambda K(v)=\lambda f, \lambda\in [0,1]
+    \end{gathered}
+\end{equation}
+что совпадает с уравнением \ref{eq:3.3} для $\lambda=1$.
+
+\begin{theorem}\label{tm:3.1}
+    Если $v\in X$ является решением операторного уравнения \ref{eq:3.5} для некоторых $\lambda\in [0,1]$, тогда справедлива следующая оценка:
+    \begin{equation}\label{eq:3.6}
+        \begin{gathered}
+            \varepsilon\|v\|^2_X\leqslant C_{14}, \textrm{ где } C_{14}=\frac{\|f\|^2_{V^*}}{2\nu}
+        \end{gathered}
+    \end{equation}
+    Более того, если $\lambda = 1$, тогда справедлива следующая оценка:
+    \begin{equation}\label{eq:3.7}
+        \begin{gathered}
+            \nu\|v\|^2_X\leqslant C_{15}, \textrm{ где } C_{15}=\frac{\|f\|^2_{V^*}}{\nu}
+        \end{gathered}
+    \end{equation}
+\end{theorem}
+
+\begin{proof}
+Пусть $X$ --- решение \ref{eq:3.5}. Тогда для любого $\varphi\in  X$ выполняется уравнение:
+\begin{equation}\label{eq:3.8}
+    \begin{gathered}
+        \varepsilon\int\limits_{\Omega}\nabla (\Delta v):\nabla (\Delta\varphi)dx - \lambda\int\limits_{\Omega}\sum_{i,j=1}^n v_iv_j
+        \frac{\partial\varphi_j}{\partial x_i}dx +\lambda\nu\int\limits_{\Omega}\nabla v : \nabla\varphi dx \\
+        -\lambda\varkappa\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_i}{\partial x_j}\frac{\partial^2 \varphi_j}{\partial x_i\partial x_k}dx 
+        -\lambda\varkappa\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_j}{\partial x_i}\frac{\partial^2 \varphi_j}{\partial x_i\partial x_k}dx \\
+        +2\lambda\varkappa\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}\bigg):\nabla\varphi dx=\lambda\langle f, v\rangle
+    \end{gathered}
+\end{equation}
+    Запишем, что  
+    $$\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_i}{\partial x_j}\frac{\partial^2 \varphi_j}{\partial x_i\partial x_k}dx+
+    \int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial v_j}{\partial x_i}\frac{\partial^2 \varphi_j}{\partial x_i\partial x_k}dx $$
+    $$= 2\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k(t)\mathcal{E}_{ij}(v)\frac{\partial^2 \varphi_j}{\partial x_i\partial x_k}dx=-2
+    \int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial\varphi_j}{\partial x_i}dx $$
+    $$-2\int\limits_{\Omega}\sum_{i,j,k=1}^n\frac{\partial v_k}{\partial x_k}\mathcal{E}_{ij}(v)\frac{\partial\varphi_j}{\partial x_i}dx
+    =-2\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k \frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial\varphi_j}{\partial x_i}dx.$$
+    Следовательно, \ref{eq:3.8} запишется в форме
+    $$\varepsilon\int\limits_{\Omega}\nabla(\Delta v):\nabla(\Delta\varphi)dx-\lambda\int\limits_{\Omega}\sum_{i,j,k=1}^n v_iv_j\frac{\partial\varphi_j}{\partial x_i}dx$$
+    $$+\lambda\nu\int\limits_{\Omega}\nabla v:\nabla\varphi dx+2\lambda\nu\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial\varphi_j}{\partial x_i}dx$$
+    $$+2\lambda\varkappa\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):\nabla\varphi dx=\lambda\langle f, v\rangle$$
+    Поскольку последнее равенство выполняется для всех $\varphi\in X$, это верно для $\varphi=v$ так же:
+    \begin{equation}\label{eq:3.9}
+        \begin{gathered}
+            \varepsilon\int\limits_{\Omega}\nabla(\Delta v):\nabla(\Delta\varphi)dx-\lambda\int\limits_{\Omega}\sum_{i,j,k=1}^n v_iv_j\frac{\partial v_j}{\partial x_i}dx \\
+            +\lambda\nu\int\limits_{\Omega}\nabla v:\nabla\varphi+2\lambda\varkappa\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial\varphi_j}{\partial x_i}dx \\
+            +2\lambda\varkappa\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):\nabla v dx=\lambda\langle f, v\rangle.
+        \end{gathered}
+    \end{equation}
+Сведем слогаемыемв левой части уравнения \ref{eq:3.9} следующим образом:
+$$\varepsilon\int\limits_{\Omega}\nabla(\Delta v):\nabla(\Delta\varphi)dx=\varepsilon\|v\|^2_X;$$
+$$\int\limits_{\Omega}\sum_{i,j=1}^n v_iv_j\frac{\partial v_j}{\partial x_i}dx=\int\limits_{\Omega}\sum_{i,j=1}^n v_i
+\frac{\partial (v_jv_j)}{\partial x_i}dx=-\int\limits_{\Omega}\sum_{i,j=1}^n\frac{\partial v_i}{\partial x_i}v_jv_jdx=0$$
+$$\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):\nabla v dx=\frac{1}{2}\int\limits_{\Omega}\bigg(\mathcal{E}(v)
+W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):$$
+$$:\bigg(\mathcal{E}(v)+W(v)\bigg)dx=\frac{1}{2}\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):\mathcal{E}(v)dx$$
+$$+\frac{1}{2}\int\limits_{\Omega}\bigg(\mathcal{E}(v)W_{\rho}(v)-W_{\rho}(v)\mathcal{E}(v)\bigg):W(v)dx=\frac{1}{2}\sum_{i,j,k=1}^n\int\limits_{\Omega}
+\mathcal{E}_{ij}(W_{\rho})_{jk}\mathcal{E}_{ik}$$
+$$-(W_{\rho})_{jk}\mathcal{E}_{ki}\mathcal{E}_{ji}\bigg)dx+\frac{1}{2}\sum_{i,j,k=1}^n\int\limits_{\Omega}\bigg(\mathcal{E}_{ij}(W_{\rho})_{jk}W_{ik}-
+(W_{\rho})_{kj}\mathcal{E}_{ji}W_{ki}\bigg) dx$$
+$$\frac{1}{2}\sum_{i,j,k=1}^n\int\limits_{\Omega}\mathcal{E}_{ij}(W_{\rho})_{jk}\mathcal{E}_{ik}-\mathcal{E}_{ij}(W_{\rho})_{jk}\mathcal{E}_{ik}+
+\frac{1}{2}\sum_{i,j,k=1}^n\int\limits_{\Omega}\mathcal{E}_{ij}(W_{\rho})_{jk}W_{ik}$$
+$$-\mathcal{E}_{ij}(W_{\rho})_{jk}W_{ik}dx=0;$$
+$$\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial v_j}{\partial x_i}dx=\frac{1}{2}\bigg(
+\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial v_j}{\partial x_i}dx$$
+$$+\int\limits_{\Omega}\sum_{i,j,k=1}^nv_k\frac{\partial\mathcal{E}_{ij}(v)}{\partial x_k}\frac{\partial v_i}{\partial x_j}dx\bigg)=
+\int\limits_{\Omega}\sum_{i,j,k=1}^n v_k\frac{\partial (\mathcal{E}_{ij}(v)\mathcal{E}_{ij}(v))}{\partial x_k}dx$$
+$$=-\int\limits_{\Omega}\sum_{k=1}^n \frac{\partial v_k}{\partial x_k}\sum_{i,j=1}^n\mathcal{E}_{ij}(v)\mathcal{E}_{ij}(v)dx=0.$$
+Здесь указано, что тензор скорости дифформации $\mathcal{E}(u)$ симметричен, а тензоры $W_{\rho}(v)$ и $W(v)$ кососимметричны. 
+Следовательно, уравнения \ref{eq:3.9} переписать в следующем виде:
+$$\varepsilon\|v\|^2_X+\lambda\nu\|v\|^2_V=\lambda\langle f,v\rangle$$
+Используя верхнюю оценку правой части последнего уравнения.
+$$\lambda\langle f,v\rangle\leqslant\lambda |\langle f,v\rangle|\leqslant\lambda\|f\|_{V^*}\|v\|_V\leqslant\|f\|_{V^*}\|v\|_V\leqslant
+\lambda\frac{\|f\|_{V^*}^2}{2\delta}+\lambda\frac{\delta\|v\|_V^2}{2}$$
+для $\delta=\nu$ имеем
+$$\varepsilon\|v\|^2_X+\lambda\nu\|v\|^2_V\leqslant\lambda\frac{\|f\|^2_{V^*}}{2\nu}+\lambda\frac{\nu\|v\|^2_V}{2},$$
+$$\varepsilon\|v\|^2_X+\lambda\frac{\nu\|v\|^2_V}{2}\leqslant\lambda\frac{\|f\|^2_{V^*}}{2\nu}, \varepsilon\|v\|^2_X\leqslant\lambda
+\frac{\|f\|^2_{V^*}}{2\nu}\leqslant\frac{\|f\|^2_{V^*}}{2\nu}$$
+Аналогично для $\lambda=1$ имеем $\nu\|v\|^2_V\leqslant\lambda\frac{\|f\|^2_{V^*}}{\nu}$. Это доказывает \ref{eq:3.6} и \ref{eq:3.7}.
+\end{proof}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\section{Доказательство теоремы 2.1}
+
+\begin{proof}
+    В (\ref{eq:2.1}) возьмем $\varepsilon_m = \frac{1}{m}$. Последовательность $\{\varepsilon_m\}$ сходится к нулю при $m \rightarrow +\infty$.
+    По теореме 3.2 для любого $\varepsilon_m$ существует слабое решение $v_m \in X \subset V$ задачи аппроксимации.
+    Таким образом, каждое $v_m$ удовлетворяет уравнению
+
+    $$\varepsilon_m \int\limits_{\Omega} \nabla (\Delta v_m): \nabla (\Delta \varphi) dx -
+    \int\limits_{\Omega}\sum_{i,j=1}^n (v_m)_i (v_m) \frac{\partial \varphi_j}{\partial x_i} dx + \nu
+    \int\limits_{\Omega} \nabla v_m: \nabla \varphi dx$$
+    $$-\varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_m)_k
+    \frac{\partial (v_m)_i}{\partial x_j} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx - \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n
+    (v_m)_k \frac{\partial (v_m)_j}{\partial x_i} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx$$
+    \begin{equation}\label{eq:4.1}
+        \begin{gathered}
+            +2\varkappa \int\limits_{\Omega} \bigg(\mathcal{E}(v_m)W_\rho (v_m) - W_\rho(v_m)\mathcal{E}(v_m)\bigg): \nabla dx =
+            \langle f, \varphi \rangle.
+        \end{gathered}
+    \end{equation}
+
+    Тогда без ограничения общности (переходя при необходимости к последовательности) из (3.6) получаем, что
+    $$\lim_{m \rightarrow \infty}\bigg| \varepsilon_m \int\limits_{\Omega} \nabla (\Delta v_m): \nabla (\Delta \varphi) dx \bigg| =$$
+    $$=\lim_{m \rightarrow \infty} \sqrt{\varepsilon_m} \lim_{m \rightarrow \infty}\bigg|\sqrt{\varepsilon_m}
+    \int\limits_{\Omega} \nabla (\Delta v_m): \nabla (\Delta \varphi) dx \bigg|$$
+    так что мы получаем
+    $$\varepsilon_m \int\limits_{\Omega} \nabla (\Delta v_m): \nabla (\Delta \varphi) dx \rightarrow 0, \ m \rightarrow +\infty$$
+
+    Для остальных интегралов имеем
+    \begin{equation*}
+        \begin{gathered}
+            \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_m)_k
+            \frac{\partial (v_m)_i}{\partial x_j} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx \rightarrow
+            \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_*)_k
+            \frac{\partial (v_*)_i}{\partial x_j} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx,\\
+            m \rightarrow +\infty;
+        \end{gathered}
+    \end{equation*}
+    \begin{equation*}
+        \begin{gathered}
+            \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_m)_k
+            \frac{\partial (v_m)_j}{\partial x_i} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx \rightarrow
+            \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_*)_k
+            \frac{\partial (v_*)_j}{\partial x_i} \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx,\\
+            m \rightarrow +\infty;
+        \end{gathered}
+    \end{equation*}
+    Действительно, здесь последовательность $v_m$ сходится к $v_*$ cильно в $L_4(\Omega)^n$,
+    а $\nabla(v_m)$ сходится к $\nabla v_*$ слабо в $L_2(\Omega)^{n^2}$.
+    Таким образом, результат сходится к произведению пределов. В итоге мы имеем
+    \begin{equation*}
+        \begin{gathered}
+            \int\limits_{\Omega} \bigg(\mathcal{E}(v_m)W_\rho (v_m) - W_\rho(v_*)\mathcal{E}(v_*)\bigg): \nabla\varphi dx\\
+            = \int\limits_{\Omega} \bigg(\mathcal{E}(v_m)(W_\rho (v_m) - W_\rho(v_*))
+            + (\mathcal{E}(v_m) - \mathcal{E}(v_*))W_\rho (v_*)\bigg): \nabla\varphi dx\\
+            \leq ||\mathcal{E}(v_m)||_{L_2(\Omega)}||\nabla\varphi||_{L_2(\Omega)}||W_\rho(v_m - v_*)||_{L_\infty(\Omega)} +\\
+            + ||W_\rho(v_*)||_{L_\infty(\Omega)} \int\limits_{\Omega}\mathcal{E}(v_m - v_m): \nabla\varphi dx\\
+            \leq ||\mathcal{E}(v_m)||_{L_2(\Omega)}||\nabla\varphi||_{L_2(\Omega)}||(v_m - v_*)||_{L_2(\Omega)} +\\
+            + ||W_\rho(v_*)||_{L_\infty(\Omega)} \int\limits_{\Omega}\mathcal{E}(v_m - v_m): \nabla\varphi dx\\
+            \leq ||\mathcal{E}(v_m)||_{L_2(\Omega)}||\nabla\varphi||_{L_2(\Omega)}||(v_m - v_*)||_{L_4(\Omega)} +\\
+            + ||W_\rho(v_*)||_{L_\infty(\Omega)} \int\limits_{\Omega}\mathcal{E}(v_m - v_m): \nabla\varphi dx.
+        \end{gathered}
+    \end{equation*}
+    Напомним, что последовательность $v_m$ сходится к $v_*$ сильно в $L_4(\Omega)^n$,
+    а $\nabla(v_m)$ сходится к $\nabla v_*$ слабо в $L_2(\Omega)^{n^2}$.
+    Следовательно, мы имеем
+    $$\int\limits_{\Omega}\mathcal{E}(v_m) W_\rho(v_m): \nabla\varphi dx \rightarrow
+    \int\limits_{\Omega}\mathcal{E}(v_*) W_\rho(v_*): \nabla\varphi dx, \ m \rightarrow +\infty$$
+
+    Аналогично получаем
+    $$\int\limits_{\Omega}W_\rho(v_m)\mathcal{E}(v_m): \nabla\varphi dx \rightarrow
+    \int\limits_{\Omega}W_\rho(v_*)\mathcal{E}(v_*): \nabla\varphi dx, \ m \rightarrow +\infty$$
+
+    Таким образом, переходя к пределу в уравнении (\ref{eq:4.1}) при $m \rightarrow +\infty$,
+    мы видим, что предельная функция $v_*$ удовлетворяет следующему уравнению:
+    \begin{equation*}
+        \begin{gathered}
+            \nu\int\limits_{\Omega}\nabla v_*: \nabla\varphi dx -
+            \int\limits_{\Omega}\sum_{i,j=1}^n (v_*)_i (v_*)_j \frac{\partial \varphi_j}{\partial x_i} dx
+            - \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_*)_k \frac{\partial (v_*)_i}{\partial x_j}
+            \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx
+        \end{gathered}
+    \end{equation*}
+    \begin{equation*}
+        \begin{gathered}
+            - \varkappa \int\limits_{\Omega}\sum_{i,j,k=1}^n (v_*)_k \frac{\partial (v_*)_i}{\partial x_j}
+            \frac{\partial^2 \varphi_j}{\partial x_i \partial x_k} dx + \\ + 2 \varkappa
+            \int\limits_{\Omega}\bigg(\mathcal{E}(v_*) W_\rho(v_*) - W_\rho(v_*)\mathcal{E}(v_*)\bigg): \nabla\varphi dx
+        \end{gathered}
+    \end{equation*}
+    Это доказывает, что $v_* \in V$. Это завершает доказательство теоремы 2.1.
+\end{proof}
+
+\begin{theorem}
+    
+\end{theorem}
